--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "@vueuse/core": "^10.1.2",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "vee-validate": "^4.9.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.2.4",
